initial adding ui

--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@heroicons/react": "^1.0.5",
+    "@mui/icons-material": "^5.8.0",
+    "@mui/material": "^5.8.1",
     "@solana/wallet-adapter-base": "^0.9.3",
     "@solana/wallet-adapter-react": "^0.15.3",
     "@solana/wallet-adapter-react-ui": "^0.9.5",
