--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "yarn": "^1.22.18",
-    "zustand": "^3.6.9"
+    "zustand": "^3.6.9",
+    "axios": "^0.27.2"
   },
   "devDependencies": {
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.2",
+    "axios": "^0.27.2",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "postcss": "^8.4.5",
